--- a/gobotany/static/sass/_simplekey.scss
+++ b/gobotany/static/sass/_simplekey.scss
@@ -1180,7 +1180,6 @@ ul.get-more-questions-menu {
             }
             .view-tabs {
                 height: 26px;
-                margin-bottom: 0;
                 li + li a.current, li + li a.current:hover {
                     background: #fff;
                 }
